--- a/www/index.html
+++ b/www/index.html
@@ -50,8 +50,8 @@
 
     <script src="js/controllers.js"></script>
     <script src="js/mapa.delito.js"></script>
-    <!--<script src="js/mapaalarmas.js"></script>-->
-    <!--<script src="js/mapadelitos.js"></script>-->
+    <script src="js/mapaalarmas.js"></script>
+    <script src="js/mapadelitos.js"></script>
   </head>
 
   <body ng-app="starter">
